--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -86,7 +86,7 @@
         <div class="card-body">
           <h5 class="card-title">{{a.naziv}}</h5>
           <p class="card-text">{{a.opis}}.</p>
-          <p class="btn btn-primary" style="color: whitesmoke">3.20 eur</p>
+          <p class="btn btn-primary" style="color: whitesmoke">{{a.cijena}} eur.</p>
         </div>
       </div>
     </div>
